# perforce-triggers

./: .mypy.ini  .pylintrc  AUTHORS.md  CONTRIBUTING.md  README.md  manage.py  manage.sh  pyproject.toml
perforce_triggers/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  perforce.py  triggers.py
tests/: test_cli.py  test_config.py  test_perforce.py  test_perforce_triggers.py  test_triggers.py
